--- a/solutions_pgmpy.ipynb
+++ b/solutions_pgmpy.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Causal Inference in Statistics: A Primer\n",
-    "Bill Behrman 2023-05-24\n",
+    "Bill Behrman 2023-05-31\n",
     "\n",
     "-   1 Preliminaries: Statistical and Causal Models\n",
     "    -   1.4 Graphs\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-14T14:20:51.670773Z",
@@ -52,6 +52,14 @@
     "from pgmpy.independencies import IndependenceAssertion, Independencies\n",
     "from pgmpy.inference import CausalInference\n",
     "from pgmpy.models import BayesianNetwork"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The code below uses pgmpy version 0.1.22."
    ]
   },
   {
@@ -1019,7 +1027,7 @@
     "\n",
     "(a) Which of the arrows in Figure 2.9 can be reversed without being detected by any statistical test? \\[Hint: Use the criterion for equivalence class.\\]\n",
     "\n",
-    "This question can be [answered](https://github.com/behrman/cis/blob/master/solutions_dagitty.md#study-question-251) with the R function `dagitty::equivalenceClass()`, which generates a complete partially directed graph (CPDAG) that represents all the graphs that are Markov equivalent to the input DAG. There is no comparable functionality in pgmpy as of version 0.1.22 (`pgmpy.base.DAG.to_pdag()` has not been implemented)."
+    "This question can be [answered](https://github.com/behrman/cis/blob/master/solutions_dagitty.md#study-question-251) with the R function `dagitty::equivalenceClass()`, which generates a complete partially directed graph (CPDAG) that represents all the graphs that are Markov equivalent to the input DAG. There is no comparable functionality in pgmpy as of version 0.1.22 (`DAG.to_pdag()` has not been implemented)."
    ]
   },
   {
@@ -1301,7 +1309,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note: The computation for `get_all_backdoor_adjustment_sets()` grows exponentially with the number of nodes in the graph, so it is only suitable for relatively small graphs."
+    "Note: As of pgmpy version 0.1.22, the computation for `get_all_backdoor_adjustment_sets()` grows exponentially with the number of nodes in the graph, so it is only suitable for relatively small graphs."
    ]
   },
   {
@@ -1401,7 +1409,7 @@
    "source": [
     "We saw in question 3.3.1 (b) that all backdoor adjustment sets for the effect of X on Y in Figure 3.8 require at least two variables. The single variable W, however, is a front-door adjustment set through which the effect of X on Y could be identified.\n",
     "\n",
-    "Note: The computation for `get_all_frontdoor_adjustment_sets()` grows exponentially with the number of nodes in the graph, so it is only suitable for relatively small graphs."
+    "Note: As of pgmpy version 0.1.22, the computation for `get_all_frontdoor_adjustment_sets()` grows exponentially with the number of nodes in the graph, so it is only suitable for relatively small graphs."
    ]
   },
   {
@@ -1691,7 +1699,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
