--- a/README.qmd
+++ b/README.qmd
@@ -10,7 +10,7 @@ format:
 
 This repository contains solutions to the study questions from the book
 
-J Pearl, M Glymour, NP Jewell. Causal Inference in Statistics: A Primer. Wiley, 2016.
+Pearl J, Glymour M, Jewell NP. Causal Inference in Statistics: A Primer. Wiley, 2016.
 
 The [book's website](http://bayes.cs.ucla.edu/PRIMER/) contains PDFs for each chapter.
 
